# api/main/v1/main.pb.go
@@ -1,0 +1,257 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v6.33.2
+// source: api/main/v1/main.proto
+
+package v1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	_ "google.golang.org/protobuf/types/known/structpb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type PromptType int32
+
+const (
+	PromptType_UNKNOWN       PromptType = 0
+	PromptType_FIND_ITEM     PromptType = 1
+	PromptType_SELECT_OPTION PromptType = 2
+	PromptType_MAKE_PAYMENT  PromptType = 3
+)
+
+// Enum value maps for PromptType.
+var (
+	PromptType_name = map[int32]string{
+		0: "UNKNOWN",
+		1: "FIND_ITEM",
+		2: "SELECT_OPTION",
+		3: "MAKE_PAYMENT",
+	}
+	PromptType_value = map[string]int32{
+		"UNKNOWN":       0,
+		"FIND_ITEM":     1,
+		"SELECT_OPTION": 2,
+		"MAKE_PAYMENT":  3,
+	}
+)
+
+func (x PromptType) Enum() *PromptType {
+	p := new(PromptType)
+	*p = x
+	return p
+}
+
+func (x PromptType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (PromptType) Descriptor() protoreflect.EnumDescriptor {
+	return file_api_main_v1_main_proto_enumTypes[0].Descriptor()
+}
+
+func (PromptType) Type() protoreflect.EnumType {
+	return &file_api_main_v1_main_proto_enumTypes[0]
+}
+
+func (x PromptType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use PromptType.Descriptor instead.
+func (PromptType) EnumDescriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{0}
+}
+
+type SendPromptRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Prompt        string                 `protobuf:"bytes,1,opt,name=prompt,proto3" json:"prompt,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *SendPromptRequest) Reset() {
+	*x = SendPromptRequest{}
+	mi := &file_api_main_v1_main_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *SendPromptRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SendPromptRequest) ProtoMessage() {}
+
+func (x *SendPromptRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_main_v1_main_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SendPromptRequest.ProtoReflect.Descriptor instead.
+func (*SendPromptRequest) Descriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *SendPromptRequest) GetPrompt() string {
+	if x != nil {
+		return x.Prompt
+	}
+	return ""
+}
+
+type SendPromptReply struct {
+	state           protoimpl.MessageState `protogen:"open.v1"`
+	Type            PromptType             `protobuf:"varint,1,opt,name=type,proto3,enum=api.main.v1.PromptType" json:"type,omitempty"`
+	Data            string                 `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
+	ServiceResponse string                 `protobuf:"bytes,3,opt,name=service_response,json=serviceResponse,proto3" json:"service_response,omitempty"`
+	unknownFields   protoimpl.UnknownFields
+	sizeCache       protoimpl.SizeCache
+}
+
+func (x *SendPromptReply) Reset() {
+	*x = SendPromptReply{}
+	mi := &file_api_main_v1_main_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *SendPromptReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SendPromptReply) ProtoMessage() {}
+
+func (x *SendPromptReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_main_v1_main_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SendPromptReply.ProtoReflect.Descriptor instead.
+func (*SendPromptReply) Descriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *SendPromptReply) GetType() PromptType {
+	if x != nil {
+		return x.Type
+	}
+	return PromptType_UNKNOWN
+}
+
+func (x *SendPromptReply) GetData() string {
+	if x != nil {
+		return x.Data
+	}
+	return ""
+}
+
+func (x *SendPromptReply) GetServiceResponse() string {
+	if x != nil {
+		return x.ServiceResponse
+	}
+	return ""
+}
+
+var File_api_main_v1_main_proto protoreflect.FileDescriptor
+
+const file_api_main_v1_main_proto_rawDesc = "" +
+	"\n" +
+	"\x16api/main/v1/main.proto\x12\vapi.main.v1\x1a\x1cgoogle/api/annotations.proto\x1a\x1cgoogle/protobuf/struct.proto\"+\n" +
+	"\x11SendPromptRequest\x12\x16\n" +
+	"\x06prompt\x18\x01 \x01(\tR\x06prompt\"}\n" +
+	"\x0fSendPromptReply\x12+\n" +
+	"\x04type\x18\x01 \x01(\x0e2\x17.api.main.v1.PromptTypeR\x04type\x12\x12\n" +
+	"\x04data\x18\x02 \x01(\tR\x04data\x12)\n" +
+	"\x10service_response\x18\x03 \x01(\tR\x0fserviceResponse*M\n" +
+	"\n" +
+	"PromptType\x12\v\n" +
+	"\aUNKNOWN\x10\x00\x12\r\n" +
+	"\tFIND_ITEM\x10\x01\x12\x11\n" +
+	"\rSELECT_OPTION\x10\x02\x12\x10\n" +
+	"\fMAKE_PAYMENT\x10\x032i\n" +
+	"\x04Main\x12a\n" +
+	"\n" +
+	"SendPrompt\x12\x1e.api.main.v1.SendPromptRequest\x1a\x1c.api.main.v1.SendPromptReply\"\x15\x82\xd3\xe4\x93\x02\x0f:\x01*\"\n" +
+	"/v1/promptB\x1eZ\x1cyinni_backend/api/main/v1;v1b\x06proto3"
+
+var (
+	file_api_main_v1_main_proto_rawDescOnce sync.Once
+	file_api_main_v1_main_proto_rawDescData []byte
+)
+
+func file_api_main_v1_main_proto_rawDescGZIP() []byte {
+	file_api_main_v1_main_proto_rawDescOnce.Do(func() {
+		file_api_main_v1_main_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_main_v1_main_proto_rawDesc), len(file_api_main_v1_main_proto_rawDesc)))
+	})
+	return file_api_main_v1_main_proto_rawDescData
+}
+
+var file_api_main_v1_main_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_api_main_v1_main_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_main_v1_main_proto_goTypes = []any{
+	(PromptType)(0),           // 0: api.main.v1.PromptType
+	(*SendPromptRequest)(nil), // 1: api.main.v1.SendPromptRequest
+	(*SendPromptReply)(nil),   // 2: api.main.v1.SendPromptReply
+}
+var file_api_main_v1_main_proto_depIdxs = []int32{
+	0, // 0: api.main.v1.SendPromptReply.type:type_name -> api.main.v1.PromptType
+	1, // 1: api.main.v1.Main.SendPrompt:input_type -> api.main.v1.SendPromptRequest
+	2, // 2: api.main.v1.Main.SendPrompt:output_type -> api.main.v1.SendPromptReply
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_main_v1_main_proto_init() }
+func file_api_main_v1_main_proto_init() {
+	if File_api_main_v1_main_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_main_v1_main_proto_rawDesc), len(file_api_main_v1_main_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_main_v1_main_proto_goTypes,
+		DependencyIndexes: file_api_main_v1_main_proto_depIdxs,
+		EnumInfos:         file_api_main_v1_main_proto_enumTypes,
+		MessageInfos:      file_api_main_v1_main_proto_msgTypes,
+	}.Build()
+	File_api_main_v1_main_proto = out.File
+	file_api_main_v1_main_proto_goTypes = nil
+	file_api_main_v1_main_proto_depIdxs = nil
+}
